# libsuperderpy

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Doxyfile  README.md  README_codestyle.md
android/: AndroidManifest.xml.in  ant.properties  build.gradle  build.xml.in
android/app/: build.gradle.in
android/app/src/main/: AndroidManifest.xml.in
android/app/src/main/java/net/dosowisko/libsuperderpy/: Activity.java.in
android/app/src/main/res/values/: strings.xml.in
android/jni/: Application.mk
android/res/layout/: main.xml
android/src/net/dosowisko/libsuperderpy/: Activity.java.in  SuperDerpyActivity.java.debug.in  SuperDerpyActivity.java.in
cmake/: AssetCache.cmake  FindAllegro5.cmake  FindAllegro5ACodec.cmake  FindAllegro5Audio.cmake  FindAllegro5Color.cmake  FindAllegro5Font.cmake  FindAllegro5Image.cmake  FindAllegro5Main.cmake  FindAllegro5Primitives.cmake  FindAllegro5TTF.cmake  FindAllegro5Video.cmake  FlacToOgg.cmake  FlacToOpus.cmake  FlacToVorbis.cmake  ImgToWebp.cmake  SetPaths.cmake  android.toolchain  i686-w64-mingw32.toolchain  include.cmake  libsuperderpy-data.cmake  libsuperderpy-gamestates.cmake  libsuperderpy-icons.cmake  libsuperderpy-src.cmake  libsuperderpy.cmake  osxcross64.toolchain  x86_64-w64-mingw32.toolchain
data/: CMakeLists.txt
src/: CMakeLists.txt  character.c  character.h  config.c  config.h  defines.h.in  emscripten-audio-stream.c  emscripten-audio-stream.h  emscripten-pre-js.js  emscripten.html.in  gamestate.c  gamestate.h  gamestates-constructor.c.in  gamestates-force-inclusion.c  gamestates-stub.c.in  internal.c  internal.h  libsuperderpy.c  libsuperderpy.h  main.c  main.h  mainloop.c  mainloop.h  maths.c  maths.h  particle.c  particle.h  shader.c  shader.h  timeline.c  timeline.h  tween.c  tween.h  utils.c  utils.h
src/gamestates/: CMakeLists.txt  bonus.c  bonus.h  burndt.c  burndt.h  dosowisko.c  dosowisko.h  info.c  info.h  level.c  loading.c  loading.h  lollipop.c  lollipop.h  menu.c  menu.h  riots.c  riots.h  rockets.c  rockets.h  theend.c  theend.h
src/imgui/: imgui_impl_allegro5.c  imgui_impl_allegro5.cpp  imgui_impl_allegro5.h
test/: CMakeLists.txt  character.c  tests.c  tests.h  timeline.c
